2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/Makefile.am (always_built_SUBDIRS): Compile common first

	* configure.in (INSTALL_GCONF_CONFIG_SOURCE): Use control-center-2
	for data directory

Tue Jan  8 15:00:27 2002  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (XF86MISC_LIBS): we now depend on esound.

2002-01-07  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Whoops, delete those invalid-dnl'ed lines. This
	is part of my use-xscreensaver-demo patch.

2002-01-04  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add libgnomeui dependency to daemon
	(it needs gnome-client).

2002-01-04  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: added
	capplets/default-applications/default-applications.desktop.in to
	AC_OUTPUT.

2002-01-03  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in (AC_OUTPUT): Remove schemas/Makefile

	* Makefile.am (SUBDIRS): Remove schemas

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* schemas/Makefile.am (schema_DATA): Add background, screensaver
	files
	(install-data-local): Allow specification of multiple schema files

	* configure.in (GNOMECC_DESKTOP_DIR): Define
	(GNOMECC_DATA_DIR): Define
	Remove AC_DEFINE_UNQUOTED for the rest of the directories

	* schemas/Makefile.am (EXTRA_DIST): Add

	* configure.in: Removed capplets/sound/Makefile

	* Makefile.am (SUBDIRS): Put gnome-settings-daemon after
	libbackgrounds

	* capplets/Makefile.am (always_built_SUBDIRS): Add common,
	background, keyboard, mouse back in

	* configure.in (PKG_CHECK_MODULES): Remove lines pertaining to the
	archiver, add line for gnome settings daemon

Sun Dec  9 19:24:47 2001  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: use gconf macros.

Sat Dec  8 21:33:10 2001  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon/gnome-settings-daemon.c (main): Import
	from gconf-xsettings module.  Cleaned up a bunch, and made to work
	with mouse properties too.
