@@ -2,4 +2,4 @@ always_built_SUBDIRS =					\
 	common default-applications desktop-links	\
 	background keyboard mouse
  
-SUBDIRS =  $(always_built_SUBDIRS) $(SCREENSAVER)
+SUBDIRS =  $(always_built_SUBDIRS)
