@@ -2,6 +2,7 @@
 
 	* Makefile.am (bin_PROGRAMS): Rename binary gnome2-control-center
 	Update
+	(CLEANFILES): Add this line
 
 2002-01-09  Jean Schurger <jschurger@schurger.org>
 
