@@ -1,5 +1,7 @@
 2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
 
+	* Makefile.am (CLEANFILES): Add this line
+
 	* capplets/Makefile.am (always_built_SUBDIRS): Compile common first
 
 	* configure.in (INSTALL_GCONF_CONFIG_SOURCE): Use control-center-2
